welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
var compteur1:Int = 0
^Poucet:10: error: ';' expected but '{' found.
  while (crossing() == false) {avance(); if 			   (estSurBiscuit == true) {compteur1 = compteur1 + 1}};
                              ^Poucet:12: error: ';' expected but 'while' found.
	else if (compteur1 <= 2) {droite(); compteur1 = 0} 		   while (sortieTrouvee == false)
                                                                           ^Poucet:16: error: 'while' expected but '}' found.
}
^